--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*test*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -16,7 +18,6 @@ eggs/
 .eggs/
 lib/
 lib64/
-parts/
 sdist/
 var/
 wheels/
